# PythonImgRecog1

./: GreenCards1.jpg:Zone.Identifier  index.py  pyproject.toml
